--- a/test-app/src/components/nav/Sidebar.css
+++ b/test-app/src/components/nav/Sidebar.css
@@ -16,7 +16,7 @@
     border-bottom-right-radius: 10px;
 
     /* Sidebar transition & opacity */
-    box-shadow: 0 5px 20px black;
+    box-shadow: 0 5px 15px black;
     transition: all 0.27s ease-in-out;
     opacity: 1;
 
@@ -35,7 +35,7 @@
     height: 100%;
 
     background-color:darkgrey;
-    box-shadow: 0 7px 20px rgba(0,0,0,0.25);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.25);
 
     font-size: 0.9rem;
     font-weight: bold;
@@ -45,7 +45,7 @@
     border-bottom-right-radius: 10px;
 
     /* Sidebar transition & opacity */
-    box-shadow: 0 7px 20px black;
+    box-shadow: 0 5px 15px black;
     transition: all 0.27s ease-in-out;
     opacity: 0.80;
 
@@ -61,11 +61,20 @@
     list-style: none;
     align-items:center;
     text-align: center;
+
+    position: fixed;
+    left: 0%;
+}
+
+.SidebarItemLink{
+    padding: 7px;
 }
 
 .SidebarItemLink:hover{
-    padding: 2px;
-    box-shadow: 0 5px 5px black;
+    box-shadow: 0 10px 30px black;
+    background-color: grey;
+
+    border-radius: 8px;
 }
 
 .SidebarItemLinkText{
